# ProhibitingSignDetector

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/ru/dksta/prohibitingsigndetector/: ActivityMain.java  ActivitySettings.java  AppMain.java  Constants.java  FragmentCamera.java  FragmentSettings.java
app/src/main/java/ru/dksta/prohibitingsigndetector/utils/: LogUtil.java  PermissionsUtil.java  Prefs.java
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  fragment_camera.xml  fragment_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary320/: build.gradle
